--- a/dialog_employes.ui
+++ b/dialog_employes.ui
@@ -25,6 +25,9 @@
    <property name="styleSheet">
     <string notr="true">background-color: rgb(255, 255, 255);</string>
    </property>
+   <property name="currentIndex">
+    <number>0</number>
+   </property>
    <widget class="QWidget" name="widget">
     <attribute name="title">
      <string>GESTION DES EMPLOYES</string>
@@ -48,7 +51,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="pushButton_afficher">
      <property name="geometry">
       <rect>
        <x>790</x>
@@ -67,7 +70,7 @@
       <string>AFFICHER</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_2">
+    <widget class="QPushButton" name="pushButton_mailing">
      <property name="geometry">
       <rect>
        <x>540</x>
@@ -86,7 +89,7 @@
       <string>ENVOYER UN MAIL</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="pushButton_ajouter">
      <property name="geometry">
       <rect>
        <x>790</x>
@@ -104,8 +107,14 @@
      <property name="text">
       <string>AJOUTER</string>
      </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_4">
+    <widget class="QPushButton" name="pushButton_supprimer">
      <property name="geometry">
       <rect>
        <x>790</x>
@@ -124,7 +133,7 @@
       <string>SUPPRIMER</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_5">
+    <widget class="QPushButton" name="pushButton_modifier">
      <property name="geometry">
       <rect>
        <x>790</x>
@@ -143,7 +152,7 @@
       <string>MODIFIER</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_6">
+    <widget class="QPushButton" name="pushButton_pdf">
      <property name="geometry">
       <rect>
        <x>270</x>
@@ -281,7 +290,7 @@ color: rgb(247, 65, 173);</string>
       <string>NOM</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QLineEdit" name="lineEdit_nom">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -369,36 +378,23 @@ color: rgb(247, 65, 173);</string>
       <string>SALAIRE</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_12">
+    <widget class="QLabel" name="label_fonction">
      <property name="geometry">
       <rect>
        <x>280</x>
        <y>480</y>
-       <width>71</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>MOTDEPASSE</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_13">
-     <property name="geometry">
-      <rect>
-       <x>280</x>
-       <y>510</y>
        <width>101</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>REVENUE</string>
+      <string>FONCTION</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>550</x>
+       <x>600</x>
        <y>330</y>
        <width>51</width>
        <height>21</height>
@@ -411,8 +407,8 @@ color: rgb(247, 65, 173);</string>
     <widget class="QLabel" name="label_15">
      <property name="geometry">
       <rect>
-       <x>550</x>
-       <y>400</y>
+       <x>590</x>
+       <y>390</y>
        <width>51</width>
        <height>21</height>
       </rect>
@@ -421,7 +417,7 @@ color: rgb(247, 65, 173);</string>
       <string>ADRESSE</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="lineEdit_prenom">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -431,7 +427,7 @@ color: rgb(247, 65, 173);</string>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_5">
+    <widget class="QLineEdit" name="lineEdit_cin">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -441,7 +437,7 @@ color: rgb(247, 65, 173);</string>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_6">
+    <widget class="QLineEdit" name="lineEdit_tel">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -451,7 +447,7 @@ color: rgb(247, 65, 173);</string>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_7">
+    <widget class="QLineEdit" name="lineEdit_mail">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -461,7 +457,7 @@ color: rgb(247, 65, 173);</string>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_8">
+    <widget class="QLineEdit" name="lineEdit_salaire">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -471,7 +467,7 @@ color: rgb(247, 65, 173);</string>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_9">
+    <widget class="QLineEdit" name="lineEdit_revenue">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -481,27 +477,17 @@ color: rgb(247, 65, 173);</string>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_10">
-     <property name="geometry">
-      <rect>
-       <x>360</x>
-       <y>510</y>
-       <width>121</width>
-       <height>20</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_11">
+    <widget class="QLineEdit" name="lineEdit_adresse">
      <property name="geometry">
       <rect>
        <x>550</x>
-       <y>430</y>
+       <y>420</y>
        <width>131</width>
        <height>20</height>
       </rect>
      </property>
     </widget>
-    <widget class="QDateEdit" name="dateEdit">
+    <widget class="QDateEdit" name="dateEdit_nais">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -514,27 +500,27 @@ color: rgb(247, 65, 173);</string>
     <widget class="QRadioButton" name="radioButton">
      <property name="geometry">
       <rect>
-       <x>560</x>
-       <y>350</y>
-       <width>41</width>
+       <x>550</x>
+       <y>360</y>
+       <width>61</width>
        <height>18</height>
       </rect>
      </property>
      <property name="text">
-      <string>H</string>
+      <string>HOMME</string>
      </property>
     </widget>
     <widget class="QRadioButton" name="radioButton_2">
      <property name="geometry">
       <rect>
        <x>630</x>
-       <y>350</y>
-       <width>41</width>
+       <y>360</y>
+       <width>61</width>
        <height>18</height>
       </rect>
      </property>
      <property name="text">
-      <string>F</string>
+      <string>FEMME</string>
      </property>
     </widget>
     <widget class="QOpenGLWidget" name="openGLWidget">
@@ -550,7 +536,7 @@ color: rgb(247, 65, 173);</string>
       <string notr="true">background-color: rgb(0, 0, 127);</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_7">
+    <widget class="QPushButton" name="pushButton_valider">
      <property name="geometry">
       <rect>
        <x>560</x>
@@ -563,19 +549,40 @@ color: rgb(247, 65, 173);</string>
       <cursorShape>PointingHandCursor</cursorShape>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(107, 35, 131);</string>
+      <string notr="true">color: rgb(107, 35, 131);
+background-color: rgb(107, 35, 131);</string>
      </property>
      <property name="text">
       <string>VALIDER</string>
      </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
+     </property>
     </widget>
+    <widget class="QTableView" name="tableView">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>200</y>
+       <width>401</width>
+       <height>301</height>
+      </rect>
+     </property>
+    </widget>
+    <zorder>tableView</zorder>
     <zorder>label</zorder>
-    <zorder>pushButton</zorder>
-    <zorder>pushButton_2</zorder>
-    <zorder>pushButton_3</zorder>
-    <zorder>pushButton_4</zorder>
-    <zorder>pushButton_5</zorder>
-    <zorder>pushButton_6</zorder>
+    <zorder>pushButton_afficher</zorder>
+    <zorder>pushButton_mailing</zorder>
+    <zorder>pushButton_ajouter</zorder>
+    <zorder>pushButton_supprimer</zorder>
+    <zorder>pushButton_modifier</zorder>
+    <zorder>pushButton_pdf</zorder>
     <zorder>comboBox</zorder>
     <zorder>label_2</zorder>
     <zorder>lineEdit</zorder>
@@ -583,30 +590,28 @@ color: rgb(247, 65, 173);</string>
     <zorder>label_3</zorder>
     <zorder>label_4</zorder>
     <zorder>label_5</zorder>
-    <zorder>lineEdit_3</zorder>
+    <zorder>lineEdit_nom</zorder>
     <zorder>label_6</zorder>
     <zorder>label_7</zorder>
     <zorder>label_8</zorder>
     <zorder>label_9</zorder>
     <zorder>label_10</zorder>
     <zorder>label_11</zorder>
-    <zorder>label_12</zorder>
-    <zorder>label_13</zorder>
+    <zorder>label_fonction</zorder>
     <zorder>label_14</zorder>
     <zorder>label_15</zorder>
-    <zorder>lineEdit_4</zorder>
-    <zorder>lineEdit_5</zorder>
-    <zorder>lineEdit_6</zorder>
-    <zorder>lineEdit_7</zorder>
-    <zorder>lineEdit_8</zorder>
-    <zorder>lineEdit_9</zorder>
-    <zorder>lineEdit_10</zorder>
-    <zorder>lineEdit_11</zorder>
-    <zorder>dateEdit</zorder>
+    <zorder>lineEdit_prenom</zorder>
+    <zorder>lineEdit_cin</zorder>
+    <zorder>lineEdit_tel</zorder>
+    <zorder>lineEdit_mail</zorder>
+    <zorder>lineEdit_salaire</zorder>
+    <zorder>lineEdit_revenue</zorder>
+    <zorder>lineEdit_adresse</zorder>
+    <zorder>dateEdit_nais</zorder>
     <zorder>radioButton</zorder>
     <zorder>radioButton_2</zorder>
     <zorder>openGLWidget</zorder>
-    <zorder>pushButton_7</zorder>
+    <zorder>pushButton_valider</zorder>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
