--- a/dialog_employes.ui
+++ b/dialog_employes.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QTabWidget" name="tabWidget">
+  <widget class="QTabWidget" name="GESTION_DES_EMPLOYES">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -260,13 +260,13 @@ font: 11pt &quot;MS Shell Dlg 2&quot;;</string>
       <string>Rechercher</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
+    <widget class="QLabel" name="label_menu_active">
      <property name="geometry">
       <rect>
-       <x>380</x>
-       <y>150</y>
-       <width>201</width>
-       <height>31</height>
+       <x>350</x>
+       <y>160</y>
+       <width>271</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -526,10 +526,10 @@ color: rgb(247, 65, 173);</string>
     <widget class="QOpenGLWidget" name="openGLWidget">
      <property name="geometry">
       <rect>
-       <x>290</x>
-       <y>180</y>
-       <width>101</width>
-       <height>81</height>
+       <x>280</x>
+       <y>200</y>
+       <width>61</width>
+       <height>61</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -588,7 +588,7 @@ background-color: rgb(107, 35, 131);</string>
     <zorder>lineEdit</zorder>
     <zorder>lineEdit_2</zorder>
     <zorder>label_3</zorder>
-    <zorder>label_4</zorder>
+    <zorder>label_menu_active</zorder>
     <zorder>label_5</zorder>
     <zorder>lineEdit_nom</zorder>
     <zorder>label_6</zorder>
