--- a/dialog_employes.ui
+++ b/dialog_employes.ui
@@ -541,19 +541,6 @@ color: rgb(247, 65, 173);</string>
       <string>FEMME</string>
      </property>
     </widget>
-    <widget class="QOpenGLWidget" name="openGLWidget">
-     <property name="geometry">
-      <rect>
-       <x>710</x>
-       <y>140</y>
-       <width>61</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(0, 0, 127);</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_valider">
      <property name="geometry">
       <rect>
@@ -583,16 +570,6 @@ background-color: rgb(85, 170, 0);</string>
       <bool>false</bool>
      </property>
     </widget>
-    <widget class="QTableView" name="tableView">
-     <property name="geometry">
-      <rect>
-       <x>270</x>
-       <y>200</y>
-       <width>401</width>
-       <height>301</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
@@ -613,6 +590,41 @@ color: rgb(255, 255, 255);</string>
       <string>Deconnection</string>
      </property>
     </widget>
+    <widget class="QLineEdit" name="lineEdit_id_supprimer">
+     <property name="geometry">
+      <rect>
+       <x>800</x>
+       <y>420</y>
+       <width>113</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QStackedWidget" name="stackedWidget">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>250</y>
+       <width>241</width>
+       <height>191</height>
+      </rect>
+     </property>
+     <property name="currentIndex">
+      <number>1</number>
+     </property>
+     <widget class="QWidget" name="page"/>
+     <widget class="QWidget" name="page_2"/>
+    </widget>
+    <widget class="QTableView" name="tableView">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>190</y>
+       <width>256</width>
+       <height>192</height>
+      </rect>
+     </property>
+    </widget>
     <zorder>tableView</zorder>
     <zorder>label</zorder>
     <zorder>pushButton_afficher</zorder>
@@ -625,7 +637,6 @@ color: rgb(255, 255, 255);</string>
     <zorder>lineEdit</zorder>
     <zorder>lineEdit_2</zorder>
     <zorder>label_3</zorder>
-    <zorder>label_menu_active</zorder>
     <zorder>label_5</zorder>
     <zorder>lineEdit_nom</zorder>
     <zorder>label_6</zorder>
@@ -647,9 +658,11 @@ color: rgb(255, 255, 255);</string>
     <zorder>dateEdit_nais</zorder>
     <zorder>radioButton</zorder>
     <zorder>radioButton_2</zorder>
-    <zorder>openGLWidget</zorder>
     <zorder>pushButton_valider</zorder>
     <zorder>pushButton</zorder>
+    <zorder>lineEdit_id_supprimer</zorder>
+    <zorder>stackedWidget</zorder>
+    <zorder>label_menu_active</zorder>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
