--- a/dialog_employes.ui
+++ b/dialog_employes.ui
@@ -1411,10 +1411,21 @@ color: rgb(247, 65, 173);</string>
         <bool>true</bool>
        </property>
       </widget>
+      <widget class="QDateEdit" name="dateEdit">
+       <property name="geometry">
+        <rect>
+         <x>89</x>
+         <y>480</y>
+         <width>161</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
       <zorder>label_cadre_1</zorder>
       <zorder>label_menu_active_5</zorder>
       <zorder>pushButton_4</zorder>
       <zorder>layoutWidget_5</zorder>
+      <zorder>dateEdit</zorder>
      </widget>
     </widget>
     <widget class="QSplitter" name="splitter">
